# confetti

./: Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: deploy.rs  main.rs
confetti/: Cargo.toml
confetti-cli/: .deepsource.toml  Cargo.toml
confetti-cli/src/: deploy.rs  installer.rs  main.rs  toolchain.rs
confetti-lib/: Cargo.toml
confetti-lib/src/: enums.rs  lib.rs
confetti/src/: can.rs  drive.rs  motor.rs
examples/: basic_bot.rs
src/: can.rs  drive.rs  errors.rs  lib.rs  main.rs  motor.rs  robot.rs
src/cli/: deploy.rs
