[package]
name = "confetti-cli"
version = "0.1.0"
edition = "2024"
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
fern = "0.7.1"
log = "0.4.29"
spinoff = "0.8.0"
ssh-rs = { version = "0.5.0", features = ["scp"] }
thiserror = "2.0.18"
toml = "0.9.11"
