[package]
name = "confetti-cli"
version = "0.1.0"
edition = "2024"
authors.workspace = true
repository.workspace = true

[[bin]]
name = "confetti"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
fern = "0.7.1"
indicatif = "0.18.3"
log = "0.4.29"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = "1.0.228"
serde_json = "1.0.149"
spinoff = "0.8.0"
ssh-rs = { version = "0.5.0", features = ["scp"] }
tempfile = "3.24.0"
thiserror = "2.0.18"
toml = "0.9.11"
